--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     padding: 0px
 }
 
+/* Menu de navegação principal */
 #principal {
     width: 100%;
     height: 100px;
@@ -13,39 +14,39 @@ body {
     border-bottom: 1px solid #bababa;
 }
 
-#menu {
-    display: flex;
-    width: 45%;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: 5%;
+    #menu {
+        display: flex;
+        width: 45%;
+        justify-content: space-around;
+        align-items: center;
+        margin-left: 5%;
+    }
 
-}
-
-#principal div a {
-    font-family: Inter;
-    font-size: 25px;
-    font-weight: 600;
-    color: white;
-    text-decoration: none;
-}
+    #principal div a {
+        font-family: Inter;
+        font-size: 25px;
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+    }
 
     #principal div a:hover {
         color: #cccccc;
     }
 
-#principal button {
-    margin-right: 5%;
-    background-color: #0c70f2;
-    border: 0px;
-    height: 40px;
-    width: 80px;
-    font-family: Inter;
-    font-size: 20px;
-    font-weight: 600;
-    color: #ffffff;
-    box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
-    border-radius: 6px;
-}
+    #principal button {
+        margin-right: 5%;
+        background-color: #0c70f2;
+        border: 0px;
+        height: 40px;
+        width: 80px;
+        font-family: Inter;
+        font-size: 20px;
+        font-weight: 600;
+        color: #ffffff;
+        box-shadow: 3px 2px 4px #0c70f240;
+        border-radius: 6px;
+        cursor: pointer;
+    }
 
 
