--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+:root{
+    --azul-dnc: #0C70F2;
+    --preto-dnc: #303030;
+    --cinza-hover: #C9C9C9;
+    --fonte-padrao: 'Inter';
+}
+
 body {
     margin: 0px;
-    padding: 0px
+    padding: 0px;
+    
+    background: linear-gradient(180deg, #0c70f280 19.91%, #0c70f200 24.84%), #303030;
+    background-repeat: no-repeat;
 }
 
 /* Menu de navegação principal */
@@ -50,3 +60,96 @@ body {
     }
 
 
+/* Seção Formulário*/
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 0px 100px 0px;
+}
+
+header {
+    color: white;
+    font-family: var(--fonte-padrao);
+    text-align: center;
+}
+
+    header h1 {
+        text-transform: uppercase;
+        font-size: 80px;
+        font-weight: 800;
+        margin-bottom: 20px;
+    }
+
+    header h2 {
+        text-align: center;
+        font-size: 40px;
+        font-weight: 700;
+        margin-bottom: 100px;
+    }
+    
+    header .invert {
+        background-color: black;
+        font-weight: bold;
+        padding: 5px;
+    }
+
+    /*Formulário*/
+
+    form {
+        color: white;
+        font-family: var(--fonte-padrao);
+        font-size: 30px;
+        font-weight: 600;
+        width: 600px;
+    }
+
+    .form-group {
+        display: flex;
+        flex-direction: column;
+        margin: 10px 0px 10px 0px;
+    }
+
+    form input {
+        border-radius: 10px;
+        height: 30px;
+        border: 0px;
+        font-size: 28px;
+        padding: 10px;
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+
+    form label {
+        margin: 10px 0px 10px 0px;
+    }
+
+    form input::placeholder {
+        color: rgba(57, 57, 57, 0.5);
+    }
+
+    .checkbox-itens label{
+        font-size: 25px;
+    }
+
+    .checkbox-itens {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    } 
+
+    input[type="checkbox"]{
+        transform: scale(1.7);
+    }
+
+    input[type="submit"]{
+        background-color: rgba(12, 112, 242, 0.9);
+        width: 100%;
+        height: 56px;
+        font-size: 32px;
+        color: white;
+        margin-top: 100px;
+        box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+        cursor: pointer;
+    }
